[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myCalculatorPackage"
version = "0.0.2"
authors = [
  { name="Khalad Hasan", email="khalad.hasan@gmail.com" },
]
description = "An example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/khalad-hasan/myCalculatorPackage"
Issues = "https://github.com/khalad-hasan/myCalculatorPackage/issues"
