[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "banking633"
version = "0.0.2"
authors = [
  { name="test", email="test@gmail.com" },
]
description = "An example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zhangz128/DATA533-project-step3-group20.git"
Issues = "https://github.com/zhangz128/DATA533-project-step3-group20.git"
